--- a/index.html
+++ b/index.html
@@ -1,70 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Sergey's website</title>
-        <link rel="stylesheet" href="files/main.css">
-        <script src="files/main.js"></script>
-    </head>
-    <body>
-        <div class="header">
-            <a href="#default" class="logo"><img class="resize" src="files/SergeyPasynkov.jpg" alt="Picture of the profile" > </a>
-            <div class="headerTitle">Hello, I am Sergey Pasynkov</div>
-        </div> 
-        <main>
-            <h2>About me</h2>
-            <div class="bodyIntro">
-                I am 3rd year student at Innopolis University. 
-                Currently working as embedded developer. I know nothing about front end development.
-                Everything is new for me. I hope this elective will give me a good overview of frontend :)
-            </div>
-            <h2 class="workHistory">Work history</h2>
-            <div class="entity1">
-                <div class="work1Left"></div>
-                <div class="work1"> 
-                    <h3>Specialist at Design Center of Electronics and Microelectronics of Innopolis University</h3>
-                    I worked on the acceleration of neural networks on FPGA as well as scientific activities.
-                    I wrote an article about comparing different designs on Verilog HDL for matrix multiplication.
-                </div>
-            </div>
-            <div class="entity2">
-                <div class="work2"> 
-                    <h3>Embedded developer at Huawei</h3>
-                    My job is to write embedded system using C programming language. Also test new features. 
-                </div>
-                <div class="work2Right"></div>
-            </div>
-            
-            <h3 class="h3skill">Skills </h3>
-            <ul>
-                <li>C++</li>
-                <li>Python</li>
-                <li>Git</li>
-                <li>Verilog</li>
-                <li>Shell</li>
-                <li>Sql</li>
-                <li>Linux</li>
-                </ul>
 
-                <div id="comicSection">
-                    <h1>Comic</h1>
-                    <div id="comic">
-                        <h2 id="titleComic">Comic title</h2>
-                        <img id="imgComic" src="data:," alt="comic image">
-                        <p id="dateComic">date</p>
-                        <script>renderComic();</script>
-                    </div>
-                </div>
-        </main>
-        <footer> 
-            <div>
-                <a href="https://t.me/howtochangealias"><img class="iconsTelegram" alt="Telegram icon" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"></a>
-                <a href="https://github.com/Chiplinka"><img class="iconsGit" alt="Git icon" src="files/GitHub_Logo.png"></a>
-                <a href="https://www.linkedin.com/in/sergei-pasynkov-7b56a0243/">
-                    <img class="iconsLinkedIn" alt="LinkedIn icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/LinkedIn_Logo_2013_%282%29.svg/512px-LinkedIn_Logo_2013_%282%29.svg.png">
-                </a>
-             </div>
+<head>
+    <meta charset="UTF-8">
+    <title>Sergey's website</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="dist/bundle.js"></script>
+</head>
 
-        </footer>
+<body>
+    <div class="header">
+        <a class="logo"><img class="resize" src="img/SergeyPasynkov.jpg" alt="Picture of the profile"> </a>
+        <div class="headerTitle">Hello, I am Sergey Pasynkov</div>
+    </div>
+    <main>
+        <h2>About me</h2>
+        <div class="bodyIntro">
+            I am 3rd year student at Innopolis University.
+            Currently working as embedded developer. I know nothing about front end development.
+            Everything is new for me. I hope this elective will give me a good overview of frontend :)
+        </div>
+        <h2 class="workHistory">Work history</h2>
+        <div class="entity1">
+            <div class="work1Left"></div>
+            <div class="work1">
+                <h3>Specialist at Design Center of Electronics and Microelectronics of Innopolis University</h3>
+                I worked on the acceleration of neural networks on FPGA as well as scientific activities.
+                I wrote an article about comparing different designs on Verilog HDL for matrix multiplication.
+            </div>
+        </div>
+        <div class="entity2">
+            <div class="work2">
+                <h3>Embedded developer at Huawei</h3>
+                My job is to write embedded system using C programming language. Also test new features.
+            </div>
+            <div class="work2Right"></div>
+        </div>
 
-    </body>
+        <h3 class="h3skill">Skills </h3>
+        <ul>
+            <li>C++</li>
+            <li>Python</li>
+            <li>Git</li>
+            <li>Verilog</li>
+            <li>Shell</li>
+            <li>Sql</li>
+            <li>Linux</li>
+        </ul>
+
+        <div id="comicSection">
+            <h1>Comic</h1>
+            <div id="comic">
+                <h2 id="titleComic">Comic title</h2>
+                <img src="#" id="imgComic" alt="comic image">
+                <p id="dateComic">date</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <a href="https://t.me/howtochangealias"><img class="iconsTelegram" alt="Telegram icon"
+                    src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"></a>
+            <a href="https://github.com/Chiplinka"><img class="iconsGit" alt="Git icon" src="img/GitHub_Logo.png"></a>
+            <a href="https://www.linkedin.com/in/sergei-pasynkov-7b56a0243/">
+                <img class="iconsLinkedIn" alt="LinkedIn icon"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/LinkedIn_Logo_2013_%282%29.svg/512px-LinkedIn_Logo_2013_%282%29.svg.png">
+            </a>
+        </div>
+    </footer>
+
+</body>
+
 </html>
